applications/oauth2-proxy/base/resources/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-oauth2-proxy
  namespace: oauth2-proxy
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: istio-gateway
      namespace: istio-system
      sectionName: https-oauth2-proxy
  hostnames:
    - oauth2-proxy.svc.home.arpa
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /oauth2
      backendRefs:
        - group: ''
          kind: Service
          name: oauth2-proxy
          port: 80
          weight: 1
